<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:padding="30dp"
    android:paddingTop="30dp"
    android:background="@drawable/fondoc"
    >

    <ImageView

        android:id="@+id/imgLoginlogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/iot"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="78dp" />

    <TextView
        android:id="@+id/txtLoginBienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenida"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLoginlogo"
        app:layout_constraintVertical_bias="0.17"
        android:textStyle="bold"
        android:textColor="@color/blue"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etLoginUser"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:hint="@string/hint1"
        android:textColorHint="@color/blueLight"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginBienvenida"
        tools:layout_editor_absoluteX="30dp"
        tools:ignore="MissingConstraints">
    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint2"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColorHint="@color/blueLight"
        app:layout_constraintTop_toBottomOf="@+id/etLoginUser"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="30dp"
        tools:ignore="MissingConstraints"
        >
    </com.google.android.material.textfield.TextInputEditText>

    <Button
        android:id="@+id/btnLoginStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/bntInicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword"
        android:backgroundTint="@color/blue"
        android:textSize="16sp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>